--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Asa Itam-Eyo|WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">home</a>
+            <a href="wwr/">Rafting website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Asa Itam-Eyo|WDD 130.</h1>
+        <img src="images/asa.jpg" alt="Asa Itam-Eyo profile." width=©️"200">
+        <p>I am excited to embark on this course as it is an entirely new experience for me.
+            I live in Calabar, a small coastal town in Cross River state Nigeria.
+            I currently work as a health care practitioner and I intend to explore how best technology
+            can be utilized to improve patient's care within our health care facility.
+            I earnestly look forward to this life changing and reforming experience.</p>
+    </main>
+    <footer>
+        <p>©️ 2025 &#10070 Asa Itam-Eyo &#10070 Cross River State, Nigeria</p>
+    </footer>
 </body>
+
 </html>
