--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <nav>
-            <a href="#">home</a>
+            <a href="#">Home</a>
             <a href="wwr/">Rafting website</a>
         </nav>
     </header>
     <main>
         <h1>Asa Itam-Eyo|WDD 130.</h1>
-        <img src="images/asa.jpg" alt="Asa Itam-Eyo profile." width=©️"200">
+        <img src="images/profile.jpg" alt="Asa Itam-Eyo profile." width="200">
         <p>I am excited to embark on this course as it is an entirely new experience for me.
             I live in Calabar, a small coastal town in Cross River state Nigeria.
             I currently work as a health care practitioner and I intend to explore how best technology
@@ -24,7 +24,7 @@
             I earnestly look forward to this life changing and reforming experience.</p>
     </main>
     <footer>
-        <p>©️ 2025 &#10070 Asa Itam-Eyo &#10070 Cross River State, Nigeria</p>
+        <p>©️ 2025 &#10070; Asa Itam-Eyo &#10070; Cross River State, Nigeria</p>
     </footer>
 </body>
 
