--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -11,14 +11,13 @@
     <h1>My Favourite City: Venice</h2>
 
 
-        <p1>Growing up I have been intrigued about the city of Venice which I got to know through novels like
-            Merchant of Vernice by Williams Shakespeare
-            and movies watched. It is a beautiful city in Northeastern Italy known for its location in the midst of
-            several islands, with stunning architectural designs.
-            I wish to one day visit the city and behold its unique building designs- notably the St. Mark's
-            Basilica, Doge's Palace, Grand canal, amongst others.</p1>
+        <p1>Growing up I have been intrigued about the city of Venice which I got to know through novels like Merchant
+            of Vernice by Williams Shakespeare and movies watched. It is a beautiful city in Northeastern Italy known
+            for its location in the midst of several islands, with stunning architectural designs. I wish to one day
+            visit the city and behold its unique building designs- notably the St. Mark's Basilica, Doge's Palace, Grand
+            canal, amongst others.</p1>
 
-        <p2>I would also love to partake in their renowned festivals like the Venice carnival, and film festivals.
+        <p2>I would also love to watch their renowned festivals like the Venice carnival, and film festivals.
             Hopefully, my dreams will become a reality in the near future.</p2>
 
 
