--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <main>
         <h1>Asa Itam-Eyo|WDD 130.</h1>
         <img src="images/profile.jpg" alt="Asa Itam-Eyo profile." width="200">
-        <p>I am excited to embark on this course as it is an entirely new experience for me.
-            I live in Calabar, a small coastal town in Cross River state Nigeria.
-            I currently work as a health care practitioner and I intend to explore how best technology
-            can be utilized to improve patient's care within our health care facility.
-            I earnestly look forward to this life changing and reforming experience.</p>
+        <p>Hello! My name is Asa Itam-Eyo and I am from Cross River State, Nigeria. I enjoy reading and acquring new
+            skills.
+            I am currently studying Web Design and Development at BYU. I am excited to learn more about web development
+            and design.
+            I am looing forward to creating my own website and learning more about the industry. I am excited to see
+            what the future holds for me.</p>
     </main>
     <footer>
         <p>©️ 2025 &#10070; Asa Itam-Eyo &#10070; Cross River State, Nigeria</p>
