--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             skills.
             I am currently studying Web Design and Development at BYU. I am excited to learn more about web development
             and design.
-            I am looing forward to creating my own website and learning more about the industry. I am excited to see
+            I am looking forward to creating my own website and learning more about the industry. I am excited to see
             what the future holds for me.</p>
     </main>
     <footer>
