--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asa Itam-Eyo|WDD 130</title>
+    <meta name="description" content="Asa Itam-Eyo BYU-Idaho WDD 130 course homepage">
+    <meta name="author" content="Asa Itam-Eyo" <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -25,6 +27,15 @@
             I am looking forward to creating my own website and learning more about the industry. I am excited to see
             what the future holds for me.</p>
     </main>
+    <aside>
+        <h2>Cross River State</h2>
+        <img src="images/crossriver.jpg" alt="The Cross River">
+        <p>"Cross River is a state located in South-South Nigeria. It derives its name from the main river- Cross river
+            in south eastern Nigeria.
+            It is the 19th largest state in Nigeria. It is bordered to the north by Benue state, west by Ebonyi state
+            and Abia state and to the south-west by Akwa
+            Ibom state while its eastern border forms part of the national border with Cameroon." - wiki</p>
+    </aside>
     <footer>
         <p>©️ 2025 &#10070; Asa Itam-Eyo &#10070; Cross River State, Nigeria</p>
     </footer>
