--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asa Itam-Eyo|WDD 130</title>
     <meta name="description" content="Asa Itam-Eyo BYU-Idaho WDD 130 course homepage">
-    <meta name="author" content="Asa Itam-Eyo" <link rel="stylesheet" href="styles/styles.css">
+    <meta name="author" content="Asa Itam-Eyo">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
