update index html

--- a/index.html
+++ b/index.html
@@ -1,44 +1,66 @@
+<!--14 September 2025-->
 <!DOCTYPE html>
-<html lang="en">
+<tml lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asa Itam-Eyo|WDD 130</title>
-    <meta name="description" content="Asa Itam-Eyo BYU-Idaho WDD 130 course homepage">
-    <meta name="author" content="Asa Itam-Eyo">
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Asa Itam-Eyo|WDD 130</title>
+        <meta name="description" content="Asa Itam-Eyo BYU-Idaho WDD 130 course homepage">
+        <meta name="author" content="Asa Itam-Eyo">
+        <link rel="stylesheet" href="styles/styles.css">
 
-<body>
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting website</a>
-        </nav>
-    </header>
-    <main>
-        <h1>Asa Itam-Eyo|WDD 130.</h1>
-        <img src="images/profile.jpg" alt="Asa Itam-Eyo profile." width="200">
-        <p>Hello! My name is Asa Itam-Eyo and I am from Cross River State, Nigeria. I enjoy reading and acquring new
-            skills.
-            I am currently studying Web Design and Development at BYU. I am excited to learn more about web development
-            and design.
-            I am looking forward to creating my own website and learning more about the industry. I am excited to see
-            what the future holds for me.</p>
-    </main>
-    <aside>
-        <h2>Cross River State</h2>
-        <img src="images/crossriver.jpg" alt="The Cross River">
-        <p>"Cross River is a state located in South-South Nigeria. It derives its name from the main river- Cross river
-            in south eastern Nigeria.
-            It is the 19th largest state in Nigeria. It is bordered to the north by Benue state, west by Ebonyi state
-            and Abia state and to the south-west by Akwa
-            Ibom state while its eastern border forms part of the national border with Cameroon." - wiki</p>
-    </aside>
-    <footer>
-        <p>©️ 2025 &#10070; Asa Itam-Eyo &#10070; Cross River State, Nigeria</p>
-    </footer>
-</body>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
+    </head>
 
-</html>
+    <body>
+        <header>
+            <nav>
+                <a href="#">Home</a>
+                <a href="wwr/">Rafting website</a>
+                <a href="wwwr/site.plan-rafting. html">Siteplan</a>"
+                <a href="https://linked in.com">Profile</a>
+
+            </nav>
+        </header>
+        <main>
+            <h1>Asa Itam-Eyo|WDD 130.</h1>
+            <img src="images/profile.jpg" alt="Asa Itam-Eyo profile." width="200">
+            <p>Hello! My name is Asa Itam-Eyo and I am from Cross River State, Nigeria. I enjoy reading and acquring new
+                skills.
+                I am currently studying Web Design and Development at BYU. I am excited to learn more about web
+                development
+                and design.
+                I am looking forward to creating my own website and learning more about the industry. I am excited to
+                see
+                what the future holds for me.</p>
+            <ul class="box">
+                <l1><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple"
+                        target="_blank">Philadelphia Pennsylvania Temple"></a></l1>
+                <l1><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
+                        Nigeria Temple"></a></l1>
+                <l1><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple"
+                        target="_blank">Abuja
+                        Nigeria Temple"></a></l1>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Cross River State</h2>
+            <img src="images/crossriver.jpg" alt="The Cross River">
+            <p>"Cross River is a state located in South-South Nigeria. It derives its name from the main river- Cross
+                river
+                in south eastern Nigeria.
+                It is the 19th largest state in Nigeria. It is bordered to the north by Benue state, west by Ebonyi
+                state
+                and Abia state and to the south-west by Akwa
+                Ibom state while its eastern border forms part of the national border with Cameroon." - wiki</p>
+        </aside>
+        <footer>
+            <p>©️ 2025 &#10070; Asa Itam-Eyo &#10070; Cross River State, Nigeria</p>
+        </footer>
+    </body>
+
+    </html>
