--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Company</title>
-    <meta name="description" content=" About us page for white water rafting company">
-    <meta name="author" content="Asa Eyo Itam-Eyo">
+    <title>About Us- White Water Rafting </title>
+    <meta name="description" content="White Water Rafting company About us page.">
+    <meta name="author" content="Asa Itam-Eyo">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -15,19 +15,19 @@
         <img src="images/logo.jpg" alt="white water rafting logo." width="200">
         <nav>
             <ul>
-                <l1><a href="index.html">Home</a></l1>
-                <l1><a href="about.html">About Us</a></l1>
-                <l1><a href="trips.html">Trips</a></l1>
-                <l1><a href="contact.html">Contact Us</a></l1>
+                <li><a href="index.html">Home</a></l1>
+                <li><a href="about.html">About Us</a></l1>
+                <li><a href="trips.html">Trips</a></l1>
+                <li><a href="contact.html">Contact Us</a></l1>
             </ul>
         </nav>
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero.png" alt="Hero">
+            <img src="images/hero.png" alt="Hero Rafting">
             <h1>White Water Rafting Company</h1>
             <article>
-                <img src="images/happy.jpg" alt="Happy client" width="200">
+                <img src="images/img.jpg" alt="Happy client">
                 <p> At White Water Rafting Company, we are passionate about providing thrilling and unforgettable
                     rafting experiences. Our team of experienced guides is dedicated to ensuring your safety and
                     enjoyment on the water. </p>
@@ -36,12 +36,8 @@
 
         <section>
             <h2>History</h2>
-            <p>We live in a rich tropical rainforest region with the name of our state being derived from the river
-                that defines us. Our vision was borne out of the need to explore the aquatic habitat in our
-                environment
-                in a well packaged manner that encompasses our rich cultural practices, meals and welcoming
-                environment.
-                We look forward to your support as we maximize our fun.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, recusandae.
+
             </p>
         </section>
         <section>
@@ -51,7 +47,7 @@
 
     <footer>
         <p>©️ 2025 &#10070; White Water Rafting company &#10070; Asa Itam-Eyo</p>
-        <nav class=" socialmedia">
+        <nav class="socialmedia">
             <a href="https: //facebook.com">
                 <img src="images/facebook.png" alt="Facebook Icon">
             </a>
