--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,10 +15,10 @@
         <img src="images/logo.jpg" alt="white water rafting logo." width="200">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></l1>
-                <li><a href="about.html">About Us</a></l1>
-                <li><a href="trips.html">Trips</a></l1>
-                <li><a href="contact.html">Contact Us</a></l1>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
         <div class="hero">
             <img src="images/hero.png" alt="Hero Rafting">
             <h1>White Water Rafting Company</h1>
-            <article>
+            <article class="hero">
                 <img src="images/img.jpg" alt="Happy client">
                 <p> At White Water Rafting Company, we are passionate about providing thrilling and unforgettable
                     rafting experiences. Our team of experienced guides is dedicated to ensuring your safety and
@@ -48,14 +48,14 @@
     <footer>
         <p>©️ 2025 &#10070; White Water Rafting company &#10070; Asa Itam-Eyo</p>
         <nav class="socialmedia">
-            <a href="https: //facebook.com">
+            <a href="https:Asa Eyo Itam-Eyo //facebook.com">
                 <img src="images/facebook.png" alt="Facebook Icon">
             </a>
-            <a href="https: //linkedin.com">
+            <a href="https: Asa Eyo Itam-Eyo//linkedin.com">
                 <img src="images/linkedin.png" alt="LinkedIn Icon">
             </a>
             <a>
-                <a href="https://Instagram.com">
+                <a href="https:Asa Eyo Itam-Eyo//Instagram.com">
                     <img src="images/instagram.png" alt="Instagram Icon">
                 </a>
         </nav>
