update about html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,9 +24,9 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero.png" alt="Hero Rafting">
+            <img src="images/hero.jpg" alt="Hero Rafting">
             <h1>White Water Rafting Company</h1>
-            <article class="hero">
+            <article>
                 <img src="images/img.jpg" alt="Happy client">
                 <p> At White Water Rafting Company, we are passionate about providing thrilling and unforgettable
                     rafting experiences. Our team of experienced guides is dedicated to ensuring your safety and
