--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,16 +48,15 @@
     <footer>
         <p>©️2025 &#10070; White Water Rafting company &#10070; Asa Itam-Eyo</p>
         <nav class="socialmedia">
-            <a href="https:Asa Eyo Itam-Eyo //facebook.com">
+            <a href="//facebook.com">
                 <img src="images/facebook.png" alt="Facebook Icon">
             </a>
-            <a href="https: Asa Eyo Itam-Eyo//linkedin.com">
+            <a href="https://linkedin.com">
                 <img src="images/linkedin.png" alt="LinkedIn Icon">
             </a>
-            <a>
-                <a href="https:Asa Eyo Itam-Eyo//Instagram.com">
-                    <img src="images/instagram.png" alt="Instagram Icon">
-                </a>
+            <a href="https://Instagram.com">
+                <img src="images/instagram.png" alt="Instagram Icon">
+            </a>
         </nav>
     </footer>
 </body>
