--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,10 +46,10 @@
     </main>
 
     <footer>
-        <p>©️2025 &#10070; White Water Rafting company &#10070; Asa Itam-Eyo</p>
+        <p>©️ 2025 &#10070; White Water Rafting company &#10070; Asa Itam-Eyo</p>
         <nav class="socialmedia">
-            <a href="//facebook.com">
-                <img src="images/facebook.png" alt="Facebook Icon">
+            <a href="https://facebook.com">
+                <img src="images/facebook.jpg" alt="Facebook Icon">
             </a>
             <a href="https://linkedin.com">
                 <img src="images/linkedin.png" alt="LinkedIn Icon">
