--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
                 see
                 what the future holds for me.</p>
             <ul class="box">
-                <l1><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple"
-                        target="_blank">Philadelphia Pennsylvania Temple"></a></l1>
-                <l1><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
-                        Nigeria Temple"></a></l1>
-                <l1><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple"
-                        target="_blank">Abuja
-                        Nigeria Temple"></a></l1>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple"
+                        target="_blank">Philadelphia Pennsylvania Temple"</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
+                        Nigeria Temple"</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple"
+                        target="_blank">Abuja Nigeria Temple"</a></li>
             </ul>
         </main>
         <aside class="box">
