--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us- White Water Rafting </title>
-    <meta name="description" content="White Water Rafting company About us page.">
-    <meta name="author" content="Asa Itam-Eyo">
+    <title> About Us- Dry Oar Rafting </title>
+    <meta name="description" content="Dry Oar Rafting company About us page.">
+    <meta name="author" content="Asa">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
