--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> About Us- Dry Oar Rafting </title>
-    <meta name="description" content="Dry Oar Rafting company About us page.">
+    <meta name="description" content="A basic HTML structure sample using sematic HTML elements.">
     <meta name="author" content="Asa">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
