--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> About Us- Dry Oar Rafting </title>
-    <meta name="description" content="A basic HTML structure sample using sematic HTML elements.">
-    <meta name="author" content="Asa">
+    <title> About Us- White Water Rafting </title>
+    <meta name="description" content="This is for the purpose of easy access to a fun filled rafting experience.">
+    <meta name="author" content="Asa Itam-Eyo">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
