--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <meta name="description" content="Asa Itam-Eyo BYU-Idaho WDD 130 course homepage">
         <meta name="author" content="Asa Itam-Eyo">
         <link rel="stylesheet" href="styles/styles.css">
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -22,41 +21,48 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting website</a>
                 <a href="wwwr/site.plan-rafting. html">Siteplan</a>"
+                <a href="https://facebook.com"></a>
                 <a href="https://linked in.com">Profile</a>
 
             </nav>
         </header>
-        <main>
-            <h1>Asa Itam-Eyo|WDD 130.</h1>
-            <img src="images/profile.jpg" alt="Asa Itam-Eyo profile." width="200">
-            <p>Hello! My name is Asa Itam-Eyo and I am from Cross River State, Nigeria. I enjoy reading and acquring new
-                skills.
-                I am currently studying Web Design and Development at BYU. I am excited to learn more about web
-                development
-                and design.
-                I am looking forward to creating my own website and learning more about the industry. I am excited to
-                see
-                what the future holds for me.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple"
-                        target="_blank">Philadelphia Pennsylvania Temple"</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
-                        Nigeria Temple"</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple"
-                        target="_blank">Abuja Nigeria Temple"</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Cross River State</h2>
-            <img src="images/crossriver.jpg" alt="The Cross River">
-            <p>"Cross River is a state located in South-South Nigeria. It derives its name from the main river- Cross
-                river
-                in south eastern Nigeria.
-                It is the 19th largest state in Nigeria. It is bordered to the north by Benue state, west by Ebonyi
-                state
-                and Abia state and to the south-west by Akwa
-                Ibom state while its eastern border forms part of the national border with Cameroon." - wiki</p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Asa Itam-Eyo|WDD 130.</h1>
+                <img src="images/profile.jpg" alt="Asa Itam-Eyo profile." width="200">
+                <p>Hello! My name is Asa Itam-Eyo and I am from Cross River State, Nigeria. I enjoy reading and acquring
+                    new
+                    skills.
+                    I am currently studying Web Design and Development at BYU. I am excited to learn more about web
+                    development
+                    and design.
+                    I am looking forward to creating my own website and learning more about the industry. I am excited
+                    to
+                    see
+                    what the future holds for me.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple"
+                            target="_blank">Philadelphia Pennsylvania Temple"</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple"
+                            target="_blank">Aba
+                            Nigeria Temple"</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/abuja-nigeria-temple"
+                            target="_blank">Abuja Nigeria Temple"</a></li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Cross River State</h2>
+                <img src="images/crossriver.jpg" alt="The Cross River">
+                <p>"Cross River is a state located in South-South Nigeria. It derives its name from the main river-
+                    Cross
+                    river
+                    in south eastern Nigeria.
+                    It is the 19th largest state in Nigeria. It is bordered to the north by Benue state, west by Ebonyi
+                    state
+                    and Abia state and to the south-west by Akwa
+                    Ibom state while its eastern border forms part of the national border with Cameroon." - wiki</p>
+            </aside>
+        </div>
         <footer>
             <p>©️ 2025 &#10070; Asa Itam-Eyo &#10070; Cross River State, Nigeria</p>
         </footer>
