--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> About Us- White Water Rafting </title>
+    <title> About Us- White Water Rafting Company</title>
     <meta name="description" content="This is for the purpose of easy access to a fun filled rafting experience.">
     <meta name="author" content="Asa Itam-Eyo">
     <link rel="stylesheet" href="styles/rafting.css">
