--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,6 +22,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="Hero Rafting">
@@ -42,6 +43,23 @@
         </section>
         <section>
             <h2> Adventure Awaits You!</h2>
+            <!-- place adventure site pictures here-->
+            <figure>
+                <img src="images/Bali.jpg" alt="Bali adventure">
+                <fig caption> Bali Adventure </fig caption>
+
+                <img src="images/Half day.jpg" alt="Half day adventure">
+                <fig caption> Half day Adventure </fig caption>
+
+                <img src="images/mallard.jpg" alt="Big Mallard">
+                <fig caption> Big Mallard </fig caption>
+
+                <img src="images/Savage.jpg" alt="Savage wilderness">
+                <fig caption> Savage Wilderness </fig caption>
+
+                <img src="images/Victoria falls.jpg" alt="Victoria falls">
+                <fig caption> Victoria falls Africa </fig caption>
+            </figure>
         </section>
     </main>
 
