--- a/wwr/about.html
+++ b/wwr/about.html
@@ -41,24 +41,33 @@
 
             </p>
         </section>
-        <section>
-            <h2> Adventure Awaits You!</h2>
-            <!-- place adventure site pictures here-->
+
+        <h2> Adventure Awaits You!</h2>
+        <section class="adventures">
+
             <figure>
                 <img src="images/Bali.jpg" alt="Bali adventure">
-                <fig caption> Bali Adventure </fig caption>
+                <figcaption> Bali Adventure </figcaption>
+            </figure>
 
+            <figure>
                 <img src="images/Half day.jpg" alt="Half day adventure">
-                <fig caption> Half day Adventure </fig caption>
+                <figcaption> Half day Adventure </figcaption>
+            </figure>
 
+            <figure>
                 <img src="images/mallard.jpg" alt="Big Mallard">
-                <fig caption> Big Mallard </fig caption>
+                <figcaption> Big Mallard </figcaption>
+            </figure>
 
+            <figure>
                 <img src="images/Savage.jpg" alt="Savage wilderness">
-                <fig caption> Savage Wilderness </fig caption>
+                <figcaption> Savage Wilderness </figcaption>
+            </figure>
 
-                <img src="images/Victoria falls.jpg" alt="Victoria falls">
-                <fig caption> Victoria falls Africa </fig caption>
+            <figure>
+                <img src="images/Victoria falls.jpg" alt="Victoria falls" />
+                <figcaption> Victoria falls Africa </figcaption>
             </figure>
         </section>
     </main>
