--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,14 +44,13 @@
 
         <h2> Adventure Awaits You!</h2>
         <section class="adventures">
-
             <figure>
-                <img src="images/Bali.jpg" alt="Bali adventure">
+                <img src="images/bali.jpg" alt="Bali adventure">
                 <figcaption> Bali Adventure </figcaption>
             </figure>
 
             <figure>
-                <img src="images/Half day.jpg" alt="Half day adventure">
+                <img src="images/halfday.jpg" alt="Half day adventure">
                 <figcaption> Half day Adventure </figcaption>
             </figure>
 
@@ -61,12 +60,12 @@
             </figure>
 
             <figure>
-                <img src="images/Savage.jpg" alt="Savage wilderness">
+                <img src="images/savage.jpg" alt="Savage wilderness">
                 <figcaption> Savage Wilderness </figcaption>
             </figure>
 
             <figure>
-                <img src="images/Victoria falls.jpg" alt="Victoria falls" />
+                <img src="images/Victoria falls.jpg" alt="Victoria falls">
                 <figcaption> Victoria falls Africa </figcaption>
             </figure>
         </section>
