--- a/wwr/about.html
+++ b/wwr/about.html
@@ -65,7 +65,7 @@
             </figure>
 
             <figure>
-                <img src="images/Victoria falls.jpg" alt="Victoria falls">
+                <img src="images/victoriafalls.jpg" alt="Victoria falls">
                 <figcaption> Victoria falls Africa </figcaption>
             </figure>
         </section>
