--- a/wwr/about.html
+++ b/wwr/about.html
@@ -60,12 +60,12 @@
             </figure>
 
             <figure>
-                <img src="images/savage.jpg" alt="Savage wilderness">
+                <img src="images/savage.jpg" alt="Savage Wilderness">
                 <figcaption> Savage Wilderness </figcaption>
             </figure>
 
             <figure>
-                <img src="images/victoriafalls.jpg" alt="Victoria falls">
+                <img src="images/victoriafalls.jpg" alt="Victoria Falls">
                 <figcaption> Victoria falls Africa </figcaption>
             </figure>
         </section>
