--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,7 +51,7 @@
 
             <figure>
                 <img src="images/bali.jpg" alt="Bali adventure">
-                <figcaption> Bali Adventure </figcaption>
+                <figcaption> Bali Adventures </figcaption>
             </figure>
 
             <figure>
