--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,27 +45,27 @@
         <h2> Adventure Awaits You!</h2>
         <section class="adventures">
             <figure>
-                <img src="images/halfday.jpg" alt="Half day adventure">
+                <img src="../wwr/images/halfday.jpg" alt="Half day adventure">
                 <figcaption> Half day Adventure </figcaption>
             </figure>
 
             <figure>
-                <img src="images/bali.jpg" alt="Bali adventure">
+                <img src="../wwr/images/bali.jpg" alt="Bali adventure">
                 <figcaption> Bali Adventures </figcaption>
             </figure>
 
             <figure>
-                <img src="images/savage.jpg" alt="Savage Wilderness">
+                <img src="../wwr/images/savage.jpg" alt="Savage Wilderness">
                 <figcaption> Savage Wilderness </figcaption>
             </figure>
 
             <figure>
-                <img src="images/mallard.jpg" alt="Big Mallard">
+                <img src="../wwr/images/mallard.jpg" alt="Big Mallard">
                 <figcaption> Big Mallard </figcaption>
             </figure>
 
             <figure>
-                <img src="images/victoriafalls.jpg" alt="Victoria Falls">
+                <img src="../wwr/images/victoriafalls.jpg" alt="Victoria Falls">
                 <figcaption> Victoria falls Africa </figcaption>
             </figure>
         </section>
