--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,12 +50,12 @@
             </figure>
 
             <figure>
-                <img src="../wwr/images/bali.jpg" alt="Bali adventure">
+                <img src="../wwr/images/Bali.jpg" alt="Bali adventure">
                 <figcaption> Bali Adventures </figcaption>
             </figure>
 
             <figure>
-                <img src="../wwr/images/savage.jpg" alt="Savage Wilderness">
+                <img src="../wwr/images/Savage.jpg" alt="Savage Wilderness">
                 <figcaption> Savage Wilderness </figcaption>
             </figure>
 
