--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,14 +50,12 @@
             </figure>
 
             <figure>
-                <img src="https://github.com/asaeyo/wdd130/blob/main/wwr/images/Bali.jpg#:~:text=images-,Bali.jpg,-Savage.jpg"
-                    alt="Bali adventure">
+                <img src="../wwr/images/ubudbali.jpg" alt="Bali adventure">
                 <figcaption> Bali Adventures </figcaption>
             </figure>
 
             <figure>
-                <img src=".https://github.com/asaeyo/wdd130/blob/main/wwr/images/Savage.jpg?raw=true"
-                    alt="Savage Wilderness">
+                <img src="../wwr/images/savagewilderness.jpg" alt="Savage Wilderness">
                 <figcaption> Savage Wilderness </figcaption>
             </figure>
 
