update about html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,14 +35,21 @@
             </article>
         </div>
 
-        <section>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, recusandae.
+        <h2>History</h2>
+        <section class="history">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, recusandae. Lorem ipsum dolor,
+                sit amet consectetur adipisicing elit. Officiis fugiat iure id, dolores minima eum quos veritatis!
+                Repudiandae
+                error non corporis porro laboriosam consectetur eos debitis eaque sint, possimus a!</p>
+            <img src="../wwr/images/history.jpg" alt="Water Rafting History">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, tenetur iusto beatae reiciendis
+                fuga temporibus, aut doloribus nulla quasi quia error ex harum nobis minima doloremque aspernatur, ipsam
+                totam eaque.</p>
 
-            </p>
+
         </section>
 
-        <h2> Adventure Awaits You!</h2>
+        <h3> Adventure Awaits You!</h3>
         <section class="adventures">
             <figure>
                 <img src="../wwr/images/halfday.jpg" alt="Half day adventure">
