--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,27 +77,28 @@
                 </form>
             </div>
 
+            <div class="staff">
+                <h2> We Are Here to Serve You</h2>
+                <section class="employees">
+                    <figure>
+                        <img src="../wwr/images/genman.jpg" alt="General manager">
+                        <figcaption> Asa Itam-Eyo </figcaption>
+                        <figcaption>General Manager</figcaption>
+                    </figure>
 
-            <h2> We Are Here to Serve You</h2>
-            <section class="employees">
-                <figure>
-                    <img src="../wwr/images/genman.jpg" alt="General manager">
-                    <figcaption> Asa Itam-Eyo </figcaption>
-                    <figcaption>General Manager</figcaption>
-                </figure>
+                    <figure>
+                        <img src="../wwr/images/proman.jpg" alt="Project manager">
+                        <figcaption> Agbo Etim
+                            <figcaption>Project Manager </figcaption>
+                    </figure>
 
-                <figure>
-                    <img src="../wwr/images/proman.jpg" alt="Project manager">
-                    <figcaption> Agbo Etim
-                        <figcaption>Project Manager </figcaption>
-                </figure>
-
-                <figure>
-                    <img src="../wwr/images/pubman.jpg" alt="Public Relations Officer">
-                    <figcaption> Thelma Bassey</figcaption>
-                    <figcaption> Public Relations Officer</figcaption>
-                </figure>
-            </section>
+                    <figure>
+                        <img src="../wwr/images/pubman.jpg" alt="Public Relations Officer">
+                        <figcaption> Thelma Bassey</figcaption>
+                        <figcaption> Public Relations Officer</figcaption>
+                    </figure>
+                </section>
+            </div>
 
     </main>
 
