--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -53,15 +53,17 @@
                         </div>
                     </fieldset>
 
-                    <legend>Message Purpose</legend>
+                    <div class="message">
+                        <legend>Message Purpose</legend>
 
-                    <div class="column2">
-                        <input type="radio" id="generalinquiry" name="message_purpose">
-                        <label for="generalinquiry">General Inquiry</label><br>
-                        <input type="radio" id="reservationquestion" name="message_purpose">
-                        <label for="reservationquestion">Reservation Question</label><br>
-                        <input type="radio" id="websitesuggestion" name="message_purpose">
-                        <label for="websitesuggestion">Website Suggestion</label>
+                        <div class="column2">
+                            <input type="radio" id="generalinquiry" name="message_purpose">
+                            <label for="generalinquiry">General Inquiry</label><br>
+                            <input type="radio" id="reservationquestion" name="message_purpose">
+                            <label for="reservationquestion">Reservation Question</label><br>
+                            <input type="radio" id="websitesuggestion" name="message_purpose">
+                            <label for="websitesuggestion">Website Suggestion</label>
+                        </div>
                     </div>
 
                     <div class="column3">
