--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,7 +36,7 @@
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3203.990395152498!2d-122.0745062098707!3d38.26511747635922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1759414794750!5m2!1sen!2sng"
-                        width="750" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="650" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
@@ -54,7 +54,7 @@
                     </fieldset>
 
                     <div class="message">
-                        <legend>Message Purpose</legend>
+                        <p1>Message Purpose</p1>
 
                         <div class="column2">
                             <input type="radio" id="generalinquiry" name="message_purpose">
@@ -71,35 +71,35 @@
                         <textarea id="message" name="message" placeholder="Type here"></textarea>
                     </div>
                     <div class="form-itemcolumn4">
-                        <input type="checkbox" id="pet" name="pet">
+                        <input type="checkbox" id="action" name="action">
                         <label for="action">Please Subscribe me to the monthly newsletter</label>
                     </div>
 
-                    <button type="contact-us">Get in Touch!</button>
+                    <button type="get-in-touch">Get in Touch!</button>
                 </form>
             </div>
 
             <div class="staff">
                 <h2> We Are Here to Serve You</h2>
-                <section class="employees">
+                <div class="employees">
                     <figure>
                         <img src="../wwr/images/genman.jpg" alt="General manager">
                         <figcaption> Asa Itam-Eyo </figcaption>
-                        <figcaption>General Manager</figcaption>
+                        <flow content>General Manager</flow content>
                     </figure>
 
                     <figure>
                         <img src="../wwr/images/proman.jpg" alt="Project manager">
-                        <figcaption> Agbo Etim
-                            <figcaption>Project Manager </figcaption>
+                        <figcaption> Agbo Etim </figcaption>
+                        <flow content>Project Manager </flow content>
                     </figure>
 
                     <figure>
                         <img src="../wwr/images/pubman.jpg" alt="Public Relations Officer">
                         <figcaption> Thelma Bassey</figcaption>
-                        <figcaption> Public Relations Officer</figcaption>
+                        <flow content> Public Relations Officer</flow content>
                     </figure>
-                </section>
+                </div>
             </div>
 
     </main>
