--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="We look forward to hearing from you as plan towards a fun filled rafting experience.">
     <meta name="author" content="Asa Itam-Eyo">
-    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3203.990395152498!2d-122.0745062098707!3d38.26511747635922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1759414794750!5m2!1sen!2sng"
-                        width="650" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="650" height="450" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
